Agregué bootstrap al index

--- a/index.html
+++ b/index.html
@@ -5,32 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GAM Estudio</title>
-  <link rel="stylesheet" href="resources\css\style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./resources/css/style.css">
 </head>
 <body class="bodyindex">
 
-  <header>
-    <a href="./index.html">
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
       <img class="logo" src="./components\output-onlinepngtools.png" alt="logo">
     </a>
-  </header>
+  </nav>
 
-  <div class="indexmenu">
-    <ul>
-      <li><a href="pages\nosotros.html">nosotros</a></li>
-      <li><a href="pages\trabajos.html">trabajos</a></li>
-      <li><a href="pages\livestream.html">livestream</a></li>
-      <li><a href="pages\contacto.html">contacto</a></li>
+  <div class="container-fluid">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><a href="pages\nosotros.html">nosotros</a></li>
+      <li class="list-group-item"><a href="pages\trabajos.html">trabajos</a></li>
+      <li class="list-group-item"><a href="pages\livestream.html">livestream</a></li>
+      <li class="list-group-item"><a href="pages\contacto.html">contacto</a></li>
     </ul>
   </div>
-</body>
-
-<footer class="indexfooter">
+  
+<footer class="navbar fixed-bottom navbar-light bg-light">
   <a class="instagram-link" href="http://instagram.com/gam.estudio" target="_blank">
     <img src="components\icons8-instagram-150.png" alt="Instagram">
   </a>
   <a class="youtube-link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg" target="_blank">
     <img src="components\icons8-play-button-150.png" alt="YouTube">
   </a>
-</footer>
+</footer>  
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+</body>
 </html>
