--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bodyindex">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="../index.html">
+    <a href="#">
       <img class="logo" src="./components\output-onlinepngtools.png" alt="logo">
     </a>
   </nav>
