--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GAM - Livestream</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <meta name="description" content="Transmisión en vivo de eventos, con excelente calidad de video y sonido">
+  <meta name="keywords"
+    content="estudio, productora, audiovisual, comunicación, livestream, streaming, transmisión en vivo, vivo, video, sonido">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="../resources\css\pagestyle.css">
 </head>
+
 <body>
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a href="../index.html">
       <img class="logo" src="../components\output-onlinepngtools.png" alt="logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link" href="../pages\nosotros.html">nosotros</a></li>
         <li class="nav-item"><a class="nav-link" href="../pages\trabajos.html">trabajos</a></li>
-        <li class="nav-item"><a class="nav-link" href="../pages/livestream.html">livestream</a></li>
+        <li class="nav-item active"><a class="nav-link" href="../pages/livestream.html">livestream</a></li>
         <li class="nav-item"><a class="nav-link" href="../pages\contacto.html">contacto</a></li>
       </ul>
     </div>
   </nav>
 
   <div class="container-fluid">
-      <p>transmisión en vivo de eventos, con excelente calidad de video y sonido, para que sea visto desde redes sociales a través de cualquier dispositivo<span style="color:#43FFA8">.</span></p>
+    <p class="container-fluid__text">transmisión en vivo de eventos, con excelente calidad de video y sonido, para que
+      sea visto desde redes sociales a través de cualquier dispositivo<span style="color:#43FFA8">.</span></p>
   </div>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
 </body>
 
-<footer>
-  <div>
-    <p class="info">estudio</p>
-    <p>calle, localidad, provincia</p>
+<footer class="footer">
+  <div class="footer__section">
+    <p class="footer__text">estudio</p>
+    <p class="footer__text--light">Calle 65 N°62, La Plata, Buenos Aires</p>
   </div>
-  <div>
-    <p class="info">contacto</p>
-    <p>mail@mail.com</p>
+  <div class="footer__section">
+    <p class="footer__text">contacto</p>
+    <p class="footer__text--light">mail@mail.com</p>
   </div>
-  <div class="div-social">
-    <p class="info">redes</p>
+  <div class="footer__section">
+    <p class="footer__text">redes</p>
     <ul>
-      <li><a href="http://www.instagram.com/gam.estudio" target="_blank">Instagram </a></li>
-      <li><a href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg" target="_blank">YouTube</a></li>
+      <li class="footer__list-item"><a class="footer__link" href="http://www.instagram.com/gam.estudio"
+          target="_blank">Instagram </a></li>
+      <li class="footer__list-item"><a class="footer__link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg"
+          target="_blank">YouTube</a></li>
     </ul>
   </div>
 </footer>
+
 </html>
