Cambié logos del index, propiedades del footer de las páginas, eliminé el margen de los contenedores de texto y agregué un top margin al grid

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
   <footer class="navbar fixed-bottom navbar-light bg-light">
     <a class="instagram-link" href="https://www.facebook.com/gamestudioaudiovisual/" target="_blank">
-      <img src="components\facebook-icon.png" alt="Facebook">
+      <img src="components/facebook-logo.png" alt="Facebook">
     </a>
     <a class="instagram-link" href="http://instagram.com/gam.estudio" target="_blank">
-      <img src="components\icons8-instagram-150.png" alt="Instagram">
+      <img src="components/insta-logo.png" alt="Instagram">
     </a>
     <a class="youtube-link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg" target="_blank">
-      <img src="components\icons8-play-button-150.png" alt="YouTube">
+      <img src="components/youtube-logo.png" alt="YouTube">
     </a>
   </footer>
 
