--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -72,6 +72,8 @@
   <div class="footer__section">
     <p class="footer__text">redes</p>
     <ul>
+      <li class="footer__list-item"><a class="footer__link" href="https://www.facebook.com/gamestudioaudiovisual/"
+        target="_blank">Facebook </a></li>
       <li class="footer__list-item"><a class="footer__link" href="http://www.instagram.com/gam.estudio"
           target="_blank">Instagram </a></li>
       <li class="footer__list-item"><a class="footer__link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg"
