Cambié el nombre y el tamaño de los archivos de logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description"
     content="Somos técnicos, artistas y comunicadores dedicados a crear audiovisuales, para alcanzar objetivos artísticos, sociales y comerciales">
   <meta name="keywords" content="estudio, productora, audiovisual, comunicación, livestream, streaming">
+  <link rel="icon" type="image/png" href="components/gam-favicon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./resources/css/style.css">
@@ -18,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="#">
-      <img class="logo" src="./components\output-onlinepngtools.png" alt="logo">
+      <img class="logo" src="./components\gam-black.png" alt="logo">
     </a>
   </nav>
 
