--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Transmisión en vivo de eventos, con excelente calidad de video y sonido">
   <meta name="keywords"
     content="estudio, productora, audiovisual, comunicación, livestream, streaming, transmisión en vivo, vivo, video, sonido">
+  <link rel="icon" type="image/png" href="../components/gam-favicon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="../resources\css\pagestyle.css">
@@ -18,7 +19,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a href="../index.html">
-      <img class="logo" src="../components\output-onlinepngtools.png" alt="logo">
+      <img class="logo" src="../components\gam-black.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +68,7 @@
     <p class="footer__text">redes</p>
     <ul>
       <li class="footer__list-item"><a class="footer__link" href="https://www.facebook.com/gamestudioaudiovisual/"
-        target="_blank">Facebook </a></li>
+          target="_blank">Facebook </a></li>
       <li class="footer__list-item"><a class="footer__link" href="http://www.instagram.com/gam.estudio"
           target="_blank">Instagram </a></li>
       <li class="footer__list-item"><a class="footer__link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg"
