Saqué !importants y cambié nav-bar collapse a fullscreen

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-custom">
     <a href="#">
       <img class="logo" src="./components\gam-black.png" alt="logo">
     </a>
@@ -33,7 +33,7 @@
     </ul>
   </div>
 
-  <footer class="navbar fixed-bottom navbar-light bg-light">
+  <footer class="navbar fixed-bottom navbar-light bg-custom">
     <a class="instagram-link" href="https://www.facebook.com/gamestudioaudiovisual/" target="_blank">
       <img src="components/facebook-logo.png" alt="Facebook">
     </a>
