--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-custom">
     <a href="../index.html">
       <img class="logo" src="../components\gam-black.png" alt="logo">
     </a>
