--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
 <body>
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-custom">
-    <a href="../index.html">
+    <a class="nav-logo" href="../index.html">
       <img class="logo" src="../components\gam-black.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
