--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -38,7 +38,7 @@
   </nav>
 
   <div class="grid">
-    <div class="grid__img-1"></div>
+    <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/OpFUkZoam-Y?&showinfo=0&controls=0&autohide=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <div class="grid__img-2"></div>
     <div class="grid__img-3"></div>
     <div class="grid__img-4"></div>
