nuevo footer mobile

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -42,6 +42,47 @@
       sea visto desde redes sociales a través de cualquier dispositivo<span style="color:#43FFA8">.</span></p>
   </div>
 
+  <footer class="footer">
+    <div class="footer-desktop">
+      <div class="footer__section">
+        <p class="footer__text">estudio</p>
+        <p class="footer__text--light">Calle 65 N°62, La Plata, Buenos Aires</p>
+      </div>
+      <div class="footer__section">
+        <p class="footer__text">contacto</p>
+        <p class="footer__text--light">mail@mail.com</p>
+      </div>
+      <div class="footer__section">
+        <p class="footer__text">redes</p>
+        <ul>
+          <li class="footer__list-item"><a class="footer__link" href="https://www.facebook.com/gamestudioaudiovisual/"
+              target="_blank">Facebook </a></li>
+          <li class="footer__list-item"><a class="footer__link" href="http://www.instagram.com/gam.estudio"
+              target="_blank">Instagram </a></li>
+          <li class="footer__list-item"><a class="footer__link"
+              href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg" target="_blank">YouTube</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-mobile">
+      <div class="footer__section">
+        <p class="footer__text--light">Calle 65 N°62, La Plata, Bs. As.</p>
+        <p class="footer__text--light">mail@mail.com</p>
+      </div>
+      <div class="footer__section">
+        <a class="instagram-link" href="https://www.facebook.com/gamestudioaudiovisual/" target="_blank">
+          <img src="../components/facebook-logo.png" alt="Facebook">
+        </a>
+        <a class="instagram-link" href="http://instagram.com/gam.estudio" target="_blank">
+          <img src="../components/insta-logo.png" alt="Instagram">
+        </a>
+        <a class="youtube-link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg" target="_blank">
+          <img src="../components/youtube-logo.png" alt="YouTube">
+        </a>
+      </div>
+    </div>
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -52,27 +93,5 @@
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
 </body>
-
-<footer class="footer">
-  <div class="footer__section">
-    <p class="footer__text">estudio</p>
-    <p class="footer__text--light">Calle 65 N°62, La Plata, Buenos Aires</p>
-  </div>
-  <div class="footer__section">
-    <p class="footer__text">contacto</p>
-    <p class="footer__text--light">mail@mail.com</p>
-  </div>
-  <div class="footer__section">
-    <p class="footer__text">redes</p>
-    <ul>
-      <li class="footer__list-item"><a class="footer__link" href="https://www.facebook.com/gamestudioaudiovisual/"
-          target="_blank">Facebook </a></li>
-      <li class="footer__list-item"><a class="footer__link" href="http://www.instagram.com/gam.estudio"
-          target="_blank">Instagram </a></li>
-      <li class="footer__list-item"><a class="footer__link" href="http://youtube.com/channel/UCmvokdMhv9i3rg9MmooIIvg"
-          target="_blank">YouTube</a></li>
-    </ul>
-  </div>
-</footer>
 
 </html>
