--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -39,16 +39,17 @@
 
   <div class="grid">
     <div class="video-container"><iframe width="560" height="315"
+        src="https://www.youtube.com/embed/fmLet8uj4f8?controls=0&autohide=1" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe></div>
+    <div class="video-container"><iframe width="560" height="315"
+        src="https://www.youtube.com/embed/L74HcRV3-1E?controls=0&autohide=1" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe></div>
+    <div class="video-container"><iframe width="560" height="315"
         src="https://www.youtube.com/embed/OpFUkZoam-Y?&showinfo=0&controls=0&autohide=1" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe></div>
-    <div class="grid__img-2"></div>
-    <div class="grid__img-3"></div>
-    <div class="grid__img-4"></div>
-    <div class="grid__img-5"></div>
-    <div class="grid__img-6"></div>
-    <div class="grid__img-7"></div>
-    <div class="grid__img-8"></div>
   </div>
 
   <footer class="footer">
